# SyncRGB

./: .gitignore  Cargo.toml  LICENSE  README.ko.md  README.md  build.rs
.github/workflows/: release.yml
src/: audio.rs  config.rs  gui.rs  main.rs
src/capture/: dxgi.rs
src/color/: extractor.rs
src/device/: protocol.rs  serial.rs
