[package]
name = "SyncRGB"
version = "0.2.0"
edition = "2021"
description = "SyncRGB — 화면 색상을 USB LED에 동기화하는 경량 앱"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Globalization",
    "Win32_System_Power",
    "Win32_System_SystemServices",
] }
hidapi = "2.6"
tray-icon = "0.17"
winit = { version = "0.30", features = ["rwh_06"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = ["glow", "default_fonts"] }
winreg = "0.55"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
